/*
 * This file was generated by the Gradle 'init' task.
 *
 * This generated file contains a sample Java Library project to get you started.
 * For more details take a look at the Java Libraries chapter in the Gradle
 * User Manual available at https://docs.gradle.org/6.3/userguide/java_library_plugin.html
 */

plugins {
    id 'application'
    // Apply the java-library plugin to add support for Java Library
    id 'java-library'
}

description = 'prototypical JMonkeyEngine application'

// select one source-code (JDK) option
sourceCompatibility = '1.8'
targetCompatibility = '1.8'

// select one version of the Engine:
ext.jmonkeyengineVersion = '3.4.1-stable'

gradle.projectsEvaluated {
    tasks.withType(JavaCompile) { // compile-time options:
        options.compilerArgs << '-Xdiags:verbose'
        options.compilerArgs << '-Xlint:unchecked'
        options.deprecation = true
        options.encoding = 'UTF-8'
    }
    tasks.withType(JavaExec) { // runtime options:
        args = []
        classpath sourceSets.main.runtimeClasspath
        //debug true
        enableAssertions true
        //jvmArgs '-verbose:gc'
        //jvmArgs '-Xbatch'
        //jvmArgs '-Xms512m', '-Xmx512m'
        //jvmArgs '-XX:+PrintCompilation'
        //jvmArgs '-XX:+UseConcMarkSweepGC'
        jvmArgs '-XX:+UseG1GC', '-XX:MaxGCPauseMillis=10'
    }
}

repositories {
    //mavenLocal()
    mavenCentral()
    //jcenter()
    //maven { url 'http://nifty-gui.sourceforge.net/nifty-maven-repo' }
    maven { url 'https://jitpack.io' }
    maven { url 'https://jcenter.bintray.com/' } // for Lemur

    // Read more about repositories here:
    //   https://docs.gradle.org/current/userguide/dependency_management.html#sec:repositories
}

dependencies {
    // You can read more about how to add dependencies here:
    //   https://docs.gradle.org/current/userguide/dependency_management.html#sec:how_to_declare_your_dependencies

    // Engine
    implementation 'org.jmonkeyengine:jme3-core:' + jmonkeyengineVersion
    implementation 'org.jmonkeyengine:jme3-desktop:' + jmonkeyengineVersion
    implementation 'org.jmonkeyengine:jme3-effects:' + jmonkeyengineVersion
    //implementation 'org.jmonkeyengine:jme3-networking:' + jmonkeyengineVersion
    //implementation 'org.jmonkeyengine:jme3-niftygui:' + jmonkeyengineVersion
    //implementation 'org.jmonkeyengine:jme3-terrain:' + jmonkeyengineVersion
    
    // If your game needs physics, select either:
    //    1. Minie
    implementation 'com.github.stephengold:Minie:4.5.0+big3'
    //    2. jme3-jbullet
    //implementation 'org.jmonkeyengine:jme3-jbullet:' + jmonkeyengineVersion

    // select one version of LWJGL (from jCenter or mavenLocal)
    runtimeOnly 'org.jmonkeyengine:jme3-lwjgl:' + jmonkeyengineVersion  // LWJGL 2.x
    //runtimeOnly 'org.jmonkeyengine:jme3-lwjgl3:' + jmonkeyengineVersion // LWJGL 3.x

    // BasicGame doesn't use jme3-blender, jme3-jogg, or jme3-plugins
    //  -- they are added solely to avoid warnings from AssetConfig
    //runtimeOnly 'org.jmonkeyengine:jme3-blender:' + jmonkeyengineVersion
    runtimeOnly 'org.jmonkeyengine:jme3-jogg:' + jmonkeyengineVersion
    runtimeOnly 'org.jmonkeyengine:jme3-plugins:' + jmonkeyengineVersion

    //runtimeOnly 'org.jmonkeyengine:jme3-testdata:3.1.0-stable'
    runtimeOnly 'org.jmonkeyengine:jme3-testdata:3.4.0-alpha6'
        
    // Lemur GUI and Groovy:
    //implementation 'com.simsilica:lemur:1.15.0'
    //implementation 'com.simsilica:lemur-props:1.1.1'
    //implementation 'com.simsilica:lemur-proto:1.12.0'
    //runtimeOnly 'org.codehaus.groovy:groovy-jsr223:3.0.7'
    
    // https://mvnrepository.com/artifact/org.apache.commons/commons-lang3
    implementation 'org.apache.commons:commons-lang3:3.10'
}

// cleanup tasks
clean.dependsOn('cleanDLLs', 'cleanDyLibs', 'cleanLogs', 'cleanSOs')
task cleanDLLs(type: Delete) {
    delete fileTree(dir: '.', include: '*.dll')
}
task cleanDyLibs(type: Delete) {
    delete fileTree(dir: '.', include: '*.dylib')
}
task cleanLogs(type: Delete) {
    delete fileTree(dir: '.', include: 'hs_err_pid*.log')
}
task cleanSOs(type: Delete) {
    delete fileTree(dir: '.', include: '*.so')
}
